[b][color=orange]v5.05[/color], 05.06.2022[/b][list]
[*]Fix an error with the WeakAura Skin[/list]