@@ -1,3 +1,7 @@
 ### Changes ###
 
-  * Fix an error with the WeakAura Skin
+  * Move PvP Module to Mainline only to prevent some errors
+  * Adjust the ChatBar Options to not show all for non Retail users
+  * Updated some core code for debugging
+  * Added a WeakAura Option skin
+  * Some Option arrangement
