@@ -1,2 +1,6 @@
-[b][color=orange]v5.05[/color], 05.06.2022[/b][list]
-[*]Fix an error with the WeakAura Skin[/list]
+[b][color=orange]v5.06[/color], 09.06.2022[/b][list]
+[*]Move PvP Module to Mainline only to prevent some errors
+[*]Adjust the ChatBar Options to not show all for non Retail users
+[*]Updated some core code for debugging
+[*]Added a WeakAura Option skin
+[*]Some Option arrangement[/list]
